objects/advpm__Quota__c.object
<CustomObject>
    <fields>
        <fullName>advpm__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Month_Year__c</fullName>
        <formula>TEXT(YEAR(advpm__Start_Date__c)) &amp; &apos;-&apos; &amp; LPAD(TEXT(MONTH(advpm__Start_Date__c)),2,&apos;0&apos;)</formula>
        <label>Month/Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Timekeeper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timekeeper</label>
        <referenceTo>advpm__Timekeeper__c</referenceTo>
        <relationshipLabel>Quotas</relationshipLabel>
        <relationshipName>Quotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quota</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>